# PokeClone

./: CMakeLists.txt  README.md
src/: AnimatedSprite.cpp  AnimatedSprite.h  AudioManager.cpp  AudioManager.h  Battle.cpp  Battle.h  EnemyBossBattle.cpp  EnemyBossBattle.h  EnemyOverworld.cpp  EnemyOverworld.h  FontEnum.h  FontManager.cpp  FontManager.h  GameState.cpp  GameState.h  GameStateEnum.h  ImageEnum.h  KeyControls.cpp  KeyControls.h  Manager.cpp  Manager.h  OverWorld.cpp  OverWorld.h  Player.cpp  Player.h  Pokemon.cpp  Pokemon.h  Screen.cpp  Screen.h  SoundEffect.cpp  SoundEffect.h  SoundEffectManager.cpp  SoundEffectManager.h  SoundEnum.h  TextureManager.cpp  TextureManager.h  battleGUI.cpp  battleGUI.h  main.cpp
